test/grammar/schema/type/type_fail_21/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:6:25
  |
6 |     "firstName": "张张张", "lastName": "Doe"
  |                            ^ expected int, got str(Doe)
  |
 --> ${CWD}/main.k:3:5
  |
3 |     lastName: int
  |     ^ variable is defined here, its type is int, but got str(Doe)
  |